--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,13 @@ http {
             index  index.html index.htm;
         }
 
+        location /nr {
+          stub_status on;
+          allow 127.0.0.1;
+          deny all;
+        }
+
+
         location ~ ^/videos/(.*)/.* {
 
            alias /content;
