--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
     lua_package_path '/opt/openresty/nginx/lua/?.lua;;';
+    access_log /dev/stdout;
 
     server {
         listen       80;
@@ -30,7 +31,7 @@ http {
 
         location ~ ^/videos/(.*)/.* {
 
-           alias /content;
+           root /content;
 
            set $mediaid $1;
            access_by_lua '
