--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,9 +12,23 @@ http {
     lua_package_path '/opt/openresty/nginx/lua/?.lua;;';
     access_log /dev/stdout;
 
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
     server {
         listen       80;
         server_name  localhost;
+
+        gzip on;
+        gzip_disable "msie6";
+
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_min_length 256;
+        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
 
         location / {
@@ -32,6 +46,7 @@ http {
         location ~ ^/videos/(.*)/.* {
 
            root /content;
+           expires 1h;
 
            set $mediaid $1;
            access_by_lua '
