--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,7 +56,7 @@ http {
                  mediaid="^"..ngx.var.mediaid:gsub("%-", "%%-")
                })';
 
-               add_header 'Access-Control-Allow-Origin' 'https://*.plix.com.ar';
+               add_header 'Access-Control-Allow-Origin' 'web.plix.com.ar, dev.plix.com.ar, osde.plix.com.ar';
                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
